@startuml

[*] --> Normal

Normal : Normal state. Basically always this state
Normal : Just go straight on a lane and speed is always max limit
Normal -> PrepareLaneChange : Lowest cost future path is lane change

PrepareLaneChange : Preparation for lane change
PrepareLaneChange : Speed down for smooth lane change
PrepareLaneChange -> LaneChange : Finished slowing down

LaneChange : Change lane to a adjacent lane
LaneChange -> Normal : Finished changing lane

@enduml